Added basic debugging support with REPL and inspection